# msgpipe

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  performance_test.py  send_udp.py  План.rtf  гайдлайнс.rtf
src/: main.cpp
src/parsers/: MessageParser.cpp  MessageParser.h
src/protocol/: Message.h
src/storage/: MessageBucket.cpp  MessageBucket.h  MessageBucketStore.cpp  MessageBucketStore.h  MessageQueue.cpp  MessageQueue.h
src/workers/: SocketFd.h  TcpOutputWorker.cpp  TcpOutputWorker.h  ThreadController.cpp  ThreadController.h  UdpInputWorker.cpp  UdpInputWorker.h
tests/: CMakeLists.txt
tests/integration/: TcpOutputWorkerTests.cpp  UdpInputWorketTests.cpp
tests/unit/: MessageBucketTests.cpp  MessageParserTests.cpp  MessageQueueTests.cpp  MessageStoreTests.cpp
